--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://widget.cloudinary.com/v2.0/global/all.js"
       type="text/javascript"
